--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,34 @@ wheels/
 # Virtual environments
 .venv
 
-.terraform
+# Terraform
+.terraform/
+*.tfstate
+*.tfstate.*
+*.tfplan
+.terraform.lock.hcl
+
+# Environment files
+.env
+
+# State directories
+database-init-state/
+connectors-state/
+
+# Logs
+*.log
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
