--- a/.dev.env
+++ b/.dev.env
@@ -3,6 +3,7 @@ TF_VAR_kafka_connect_url="http://kafka-connect:8083/"
 TF_VAR_postgres_password="Jkjz1yG9bKcWBeB1zFdgqg"
 TF_VAR_debezium_user="techtonic"
 TF_VAR_debezium_pass="Jkjz1yG9bKcWBeB1zFdgqg"
+TF_VAR_postgres_user="techtonic"
 TF_VAR_postgres_host="postgres"
 TF_VAR_minio_access_key="admin"
 TF_VAR_minio_secret_key="adminpassword"
